# iNat-trails

./: LICENSE  README.md  inat_trails.py  pyproject.toml  requirements.txt  setup.py
docs/source/: api.rst  conf.py  index.rst  usage.rst
examples/: Eagle Peak from Regency Drive.gpx  Huddart_County_Park.gpx  Rancho_Canada_del_Oro.gpx
src/inattrails/: api.py  cache.py  gen_map.py  inat_observation.py  inat_place.py  inat_status.py  inat_taxon.py  inat_trails.py  main.py  read.py  trails.py  write_table.py  write_waypoints.py
